# khi_robot_app

./: README.md
docs/: README-ja.md
khi_duaro_onigiri_system/: CMakeLists.txt  README.md  package.xml
khi_duaro_onigiri_system/config/meshes/: WD002N_F5F1_Cabinet_body.stl  conveyer.stl  lower_tool.stl  stand.stl  tray.stl  tray_nooffset.stl  upper_tool.stl
khi_duaro_onigiri_system/config/robot/: duaro_onigiri.urdf.xacro  duaro_onigiri_macro.xacro  khi_duaro_onigiri.srdf
khi_duaro_onigiri_system/launch/: duaro_bringup.launch  duaro_world.launch  execute_onigiri_system.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch
khi_duaro_onigiri_system/script/: go_initial.sh
khi_duaro_onigiri_system/src/: IO.py  device.py  duaro.py  duaro_plan.py  lower.py  main.py  set_work.py  upper.py
khi_robot_sample/: CMakeLists.txt  package.xml
khi_robot_sample/config/work/: upper_tool_001.stl
khi_robot_sample/launch/: moveit.rviz  moveit_rviz.launch  sample_duaro.launch
khi_robot_sample/src/: sample_duaro.py
